# flutter_fingerprint_plugin

./: README.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: my_fingerprint_plugin.dart
lib/src/: my_fingerprint_plugin_plugin.cpp
test/: my_fingerprint_plugin_method_channel_test.dart  my_fingerprint_plugin_test.dart
windows/: CMakeLists.txt
windows/include/my_fingerprint_plugin/: my_fingerprint_plugin_c_api.h
windows/test/: my_fingerprint_plugin_test.cpp
